# Kursovaya_4

./: README.md  READMY.md  pyproject.toml
src/api/: base_api.py  hh_api.py  super_job_api.py
src/app/: job_search_app.py  job_search_meta.py
src/file_handler/: base_file_handler.py  csv_file_handler.py  json_file_handler.py
