[tool.poetry]
name = "kursovaya-4"
version = "0.1.0"
description = ""
authors = ["Алексей Грабовский <leha.grabovskiy.00@bk.ru>"]
readme = "README.md"
packages = [{include = "kursovaya_4"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
certifi = "^2023.7.22"
charset-normalizer = "3.1.0"
dbf-light = "^1.0.0"
idna = "^3.4"
pycbrf = "^1.1.0"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

